# nukunuku

./: .env  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/archive/atlas-backends/: Cargo.toml  IMPLEMENTATION_TASKS.md  README.md  SPEC.md
.github/archive/atlas-backends/proptest-regressions/: types.txt
.github/archive/atlas-backends/src/: error.rs  lib.rs  register_file.rs  topology.rs  types.rs
.github/archive/atlas-backends/tests/: class_operations_integration.rs  conformance.rs
.github/archive/atlas-isa/: Cargo.toml  README.md  SPEC.md
.github/archive/atlas-isa/src/: canonicalization.rs  instructions.rs  lib.rs  memory.rs  metadata.rs  types.rs  uor.rs
.github/archive/atlas-isa/tests/: metadata_roundtrip.rs  rational_abi.rs
.github/archive/atlas-runtime/: Cargo.toml  README.md  SPEC.md
.github/archive/atlas-runtime/proptest-regressions/: resonance.txt
.github/archive/atlas-runtime/src/: addressing.rs  buffer.rs  error.rs  kernel.rs  lib.rs  phase.rs  resonance.rs  runtime.rs  space.rs  topology.rs  validation.rs
.github/archive/atlas-runtime/tests/: runtime_integration.rs
.github/archive/hologram-py/: Cargo.toml  README.md  pyproject.toml
.github/archive/hologram-py/src/: buffer.rs  executor.rs  lib.rs
benches/: Cargo.toml  inline_performance.rs  kernel_performance.rs  lib.rs
crates/atlas-core/: Cargo.toml  SERIALIZATION.md
crates/atlas-core/benches/: serialize_bench.rs
crates/atlas-core/examples/: launch_validation_demo.rs  serialize_demo.rs
crates/atlas-core/src/: abi.rs  constants.rs  invariants.rs  lib.rs  serialize.rs  uor.rs
crates/atlas-core/tests/: serialize_integration.rs  serialize_stability.rs
crates/atlas-core/tests/snapshots/: serialize_stability__backward_compat_old_format.snap  serialize_stability__binary_format_with_metadata.snap  serialize_stability__binary_format_with_validation.snap  serialize_stability__binary_roundtrip_stable.snap  serialize_stability__binary_size_base.snap  serialize_stability__binary_size_with_metadata.snap  serialize_stability__binary_size_with_validation.snap  serialize_stability__cross_format_roundtrip_stable.snap  serialize_stability__json_format_base.snap  serialize_stability__json_format_with_metadata.snap  serialize_stability__json_format_with_validation.snap  serialize_stability__json_roundtrip_stable.snap  serialize_stability__mirror_pairs_stable.snap  serialize_stability__serialization_format_version.snap  serialize_stability__unity_classes_stable.snap  serialize_stability__validation_data_mirror_table.snap  serialize_stability__validation_data_unity_flags.snap
crates/hologram-backends/: Cargo.toml  README.md
crates/hologram-backends/src/: error.rs  json_to_isa.rs  lib.rs  pool.rs  program_builder.rs  program_cache.rs  sigmatics_to_isa.rs
crates/hologram-backends/src/backend/: mod.rs  traits.rs  types.rs
crates/hologram-backends/src/backends/: mod.rs
crates/hologram-backends/src/isa/: instruction.rs  mod.rs  program.rs  special_registers.rs  types.rs
crates/hologram-codegen/: Cargo.toml  build.rs
crates/hologram-codegen/src/: dylib_codegen.rs  error.rs  inline_kernels.rs  json_schema.rs  lib.rs  schema.rs
crates/hologram-compiler/: Cargo.toml  README.md  build.rs
crates/hologram-compiler/benches/: backend_compilation.rs  canonicalization.rs
crates/hologram-compiler/src/: ast.rs  automorphism_group.rs  automorphism_search.rs  canonical_repr.rs  canonicalization.rs  circuit.rs  class_system.rs  compiler.rs  generators.rs  lexer.rs  lib.rs  multi_class.rs  parser.rs  pattern.rs  rewrite.rs  rules.rs  types.rs
crates/hologram-compiler/src/algorithms/: deutsch_jozsa.rs  ghz.rs  mod.rs  w_states.rs
crates/hologram-compiler/src/constraints/: constraint.rs  entangled_state.rs  measurement.rs  mod.rs
crates/hologram-compiler/src/core/: born_rule.rs  measurement.rs  mod.rs  state.rs
crates/hologram-compiler/src/gates/: mod.rs  n_qubit.rs  single_qubit.rs
crates/hologram-compiler/tests/: quantum_gates.rs
crates/hologram-compiler/tests/discovery/: bell_state_validation.rs  born_rule_validation.rs  cnot_correctness.rs  determinism_validation.rs  entanglement_correlation.rs  gate_advancement_correctness.rs  gate_identities.rs  ghz_state_validation.rs  measurement_projection.rs  mod.rs  n_qubit_constraint_satisfaction.rs  partial_measurement_tests.rs  periodicity_test.rs  swap_gate_correctness.rs  toffoli_correctness.rs  w_state_validation.rs
crates/hologram-core/: Cargo.toml  README.md  build.rs
crates/hologram-core/benches/: activation_and_reduce_ops.rs  activation_ops.rs  generator_microbench.rs  linalg_ops.rs  math_ops.rs  native_vs_canonical_bench.rs  native_vs_hologram_bench.rs  operation_chains.rs  reduce_ops.rs
crates/hologram-core/examples/: bench_generators.rs  performance_profile.rs  profile_phi.rs
crates/hologram-core/src/: address_mapping.rs  buffer.rs  error.rs  executor.rs  instrumentation.rs  isa_builder.rs  kernel.rs  lib.rs  tensor.rs
crates/hologram-core/src/compiler/: address.rs  builder.rs  mod.rs  registers.rs
crates/hologram-core/src/kernel/: inline.rs
crates/hologram-core/src/ops/: activation.rs  linalg.rs  loss.rs  math.rs  math.rs.backup  memory.rs  mod.rs  parallel.rs  reduce.rs  traits.rs
crates/hologram-core/tests/: phase9_integration.rs  test_math_extended.rs  test_math_integration.rs
crates/hologram-ffi/: Cargo.toml  PROMPT.md  README.md  UPDATE_COMPLETE.md  build.rs  generate_bindings.rs
crates/hologram-ffi/interfaces/python/: .gitignore  README.md  (+6 more)
crates/hologram-ffi/scripts/: README.md  fix_python_bindings.py  rebuild.sh  rebuild_library.py  run_tests.py  run_tests.sh
crates/hologram-ffi/src/: activation.rs  advanced.rs  buffer.rs  buffer_ext.rs  buffer_zerocopy.rs  executor.rs  executor_ext.rs  handles.rs  hologram_ffi.udl  lib.rs  linalg.rs  loss.rs  math.rs  reduce.rs  tensor.rs  utils.rs
crates/hologram-ffi/tests/: README.md  compile_test.rs  minimal_test.rs
crates/hologram-tracing/: Cargo.toml  README.md
crates/hologram-tracing/src/: lib.rs  macros.rs  performance.rs
(+268 files in other folders)
