[package]
name = "hologram-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
hologram-tracing = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []