[package]
name = "hologram-compiler"
version = "0.1.0"
edition = "2021"
authors = ["UOR Foundation"]
description = "Unified 768-cycle quantum computing and circuit compiler with constraint-based execution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UOR-Foundation/hologramapp"
readme = "README.md"
keywords = ["quantum", "computing", "compiler", "canonicalization", "hologram"]
categories = ["science", "algorithms", "compilers"]

[features]
default = []
# Note: multi-qubit and n-qubit functionality is now always enabled

[dependencies]
thiserror = "2.0"
bytemuck = { version = "1.14", features = ["derive"] }
hologram-tracing = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "canonicalization"
harness = false

[[bench]]
name = "backend_compilation"
harness = false
