[package]
name = "hologram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core operations and primitives using Hologram circuit compilation"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Runtime dependencies
hologram-backends = { path = "../hologram-backends" }
hologram-codegen = { path = "../hologram-codegen" }
# Temporary: hologram-compiler types for legacy operations (to be removed in Phase 1)
hologram-compiler = { path = "../hologram-compiler" }
thiserror.workspace = true
tracing = "0.1"
bytemuck = "1.14"
paste = "1.0"
libloading = "0.8"
rayon.workspace = true
parking_lot = "0.12"

[features]
default = []
cuda = ["hologram-backends/cuda"]

[build-dependencies]
# Hologram compiler used at build-time for code generation
hologram-compiler = { path = "../hologram-compiler" }
# Backends for ISA translation at build-time
hologram-backends = { path = "../hologram-backends" }
# JSON parsing for schema files
serde_json = "1.0"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "math_ops"
harness = false

[[bench]]
name = "reduce_ops"
harness = false

[[bench]]
name = "activation_ops"
harness = false

[[bench]]
name = "linalg_ops"
harness = false

[[bench]]
name = "activation_and_reduce_ops"
harness = false

[[bench]]
name = "native_vs_hologram_bench"
harness = false

[[bench]]
name = "generator_microbench"
harness = false

[[bench]]
name = "operation_chains"
harness = false

[[bench]]
name = "native_vs_canonical_bench"
harness = false
