[package]
name = "atlas-isa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Atlas ISA specification - target-agnostic instruction set architecture"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
num-traits.workspace = true
serde.workspace = true
num-rational.workspace = true
atlas-core = { path = "../atlas-core" }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
