[package]
name = "atlas-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Atlas Runtime - Memory and state management for Atlas ISA backends"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-isa = { path = "../atlas-isa" }
thiserror.workspace = true
parking_lot = "0.12"
tracing = "0.1"
num-integer = "0.1"
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3"
