[package]
name = "hologram-py"
version = "0.1.0"
edition = "2021"
authors = ["UOR Foundation"]
description = "Python bindings for Hologram Atlas runtime"
license = "MIT OR Apache-2.0"

[lib]
name = "hologram"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
hologram-core = { path = "../hologram-core" }
atlas-runtime = { path = "../atlas-runtime" }
parking_lot = "0.12"

[build-dependencies]
pyo3-build-config = "0.20"
